2011-11-30 CERDAN Yohann  <cerdanyohann@yahoo.fr>
	* Update the save script (does not save cache datas)
2011-10-09 CERDAN Yohann  <cerdanyohann@yahoo.fr>
	* Initial release